--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,6 +9,7 @@
       <th class="l">Username</th>
       <th class="l">Name</th>
       <th class="l">Last Login</th>
+      <th class="r">Logs</th>
       <th class="r">Actions</th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= user.username %> <%= "(Admin)" if user.is_admin? %></td>
         <td><%= user.name.present? ? user.name : "–" %></td>
         <td><%= user.last_login_at ? "#{distance_of_time_in_words_to_now user.last_login_at} ago" : "never" %></td>
+        <td class="r"><%= user.logs.count %></td>
         <td class="r">
           <%= link_to "Edit", edit_admin_user_path(user) %> |
           <%= link_to "Delete", admin_user_path(user), :method => :delete, :confirm => "Do you really want to delete this user and all its logs?" %>
