--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -1,8 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
 html {
 	color: #333;
 	font: normal 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -10,7 +5,8 @@ html {
 }
 
 body {
-	padding: 0 0 40px;
+	margin: 0 0 40px;
+	padding: 0;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
@@ -109,6 +105,11 @@ input[type="submit"] {
 	line-height: 16px;
 }
 
+#header ul {
+	margin: 0;
+	padding: 0;
+}
+
 #header li {
 	display: inline;
 	margin-right: 20px;
@@ -122,6 +123,7 @@ input[type="submit"] {
 	float: right;
 	color: #555;
 	font-size: 13px;
+	margin: 0;
 }
 
 #flash-notice, #flash-error {
