Auto-focus username field

--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Login — Bikelog</title>
     <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "auth" %>
     <%= csrf_meta_tag %>
   </head>
   <body>
