Bikelog is now known as Tracklog

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -42,7 +42,7 @@
 
   <script>
     $(function() {
-      Bikelog.DashboardActivityPlots.setup("dashboard-activity-distance-plot",
+      Tracklog.DashboardActivityPlots.setup("dashboard-activity-distance-plot",
         "dashboard-activity-duration-plot",
         "<%= dashboard_activity_plots_data_path(:json) %>",
         "<%= current_user.distance_units %>");
