--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= yield(:title) %> – Bikelog</title>
-    <script>var Bikelog = {};</script>
+    <title><%= yield(:title) %> – Tracklog</title>
+    <script>var Tracklog = {};</script>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
