--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -5,9 +5,9 @@
 
 <script>
   $(function() {
-    new Bikelog.TracksFetcher("<%=j log_track_path(@track.log, @track, :json) %>", function(tracksFetcher) {
-      new Bikelog.Map("track-map", tracksFetcher, "<%= current_user.distance_units %>");
-      new Bikelog.DistanceElevationPlot("track-distance-elevation-plot", tracksFetcher, "<%= current_user.distance_units %>");
+    new Tracklog.TracksFetcher("<%=j log_track_path(@track.log, @track, :json) %>", function(tracksFetcher) {
+      new Tracklog.Map("track-map", tracksFetcher, "<%= current_user.distance_units %>");
+      new Tracklog.DistanceElevationPlot("track-distance-elevation-plot", tracksFetcher, "<%= current_user.distance_units %>");
     });
   });
 </script>
