--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Login — Bikelog</title>
+    <title>Login — Tracklog</title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
     <%= javascript_include_tag "auth" %>
