This causes a syntax error in jQuery

--- a/lib/assets/javascripts/tracklog/map.js.erb
+++ b/lib/assets/javascripts/tracklog/map.js.erb
@@ -9,8 +9,7 @@ Tracklog.MapPopupOverlay.prototype = new google.maps.OverlayView();
 Tracklog.MapPopupOverlay.prototype.draw = function() {};
 
 Tracklog.MapPopupOverlay.prototype.onAdd = function() {
-  var html = ' \
-    <div id="map-popup"> \
+  var html = '<div id="map-popup"> \
       <dl> \
         <dt>Time</dt> \
         <dd class="time"></dd> \
