--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,13 +1,14 @@
 <%- title @track.display_name -%>
 
 <%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" %>
+<%= javascript_include_tag "http://d3js.org/d3.v3.js" %>
 <%= javascript_include_tag "tracks" %>
 
 <script>
   $(function() {
     new Tracklog.TracksFetcher("<%=j log_track_path(@track.log, @track, :json) %>", function(tracksFetcher) {
       new Tracklog.Map("track-map", tracksFetcher, "<%= current_user.distance_units %>");
-      new Tracklog.DistanceElevationPlot("track-distance-elevation-plot", tracksFetcher, "<%= current_user.distance_units %>");
+      new Tracklog.DistanceElevationPlot("#track-distance-elevation-plot", tracksFetcher, "<%= current_user.distance_units %>");
     });
   });
 </script>
@@ -84,10 +85,7 @@
   <div id="track-map"></div>
 
   <h2>Elevation Profile</h2>
-
-  <div class="plot-wrapper">
-    <div id="track-distance-elevation-plot"></div>
-  </div>
+  <div id="track-distance-elevation-plot"></div>
 </div>
 
 <div id="track-rename-pane" class="site-overlay">
